[package]
name = "alwayson-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = "0.4.40"
dotenv = "0.15.0"
mysql = "26.0.0"
regex = "1.11.1"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tower_governor = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lints.clippy]
# presets
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
# individual lints
assigning_clones = "warn"
create_dir = "warn"
default_trait_access = "warn"
inefficient_to_string = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
string_to_string = "warn"