[package]
name = "alwayson-backend"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = "0.4.43"
dotenv = "0.15.0"
mysql = "27.0.0"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[lints.clippy]
# presets
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
# individual lints
assigning_clones = "warn"
create_dir = "warn"
default_trait_access = "warn"
inefficient_to_string = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
string_to_string = "warn"